Compiling main client
Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>