@@ -78,6 +78,7 @@ import glide.ffi.resolvers.ClusterScanCursorResolver;
 import glide.managers.CommandManager;
 import glide.utils.ArgsBuilder;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -200,7 +201,7 @@ public class GlideClusterClient extends BaseClient
         if (response.hasConstantResponse()) {
             return ClusterValue.ofSingleValue(handleStringResponse(response));
         }
-        var data =
+        Object data =
                 handleValkeyResponse(Object.class, EnumSet.of(ResponseFlags.ENCODING_UTF8), response);
         if (data instanceof Map) {
             return ClusterValue.ofMultiValue((Map<String, Object>) data);
@@ -216,7 +217,7 @@ public class GlideClusterClient extends BaseClient
         if (response.hasConstantResponse()) {
             return ClusterValue.ofSingleValue(handleStringResponse(response));
         }
-        var data = handleValkeyResponse(Object.class, EnumSet.noneOf(ResponseFlags.class), response);
+        Object data = handleValkeyResponse(Object.class, EnumSet.noneOf(ResponseFlags.class), response);
         if (data instanceof Map) {
             return ClusterValue.ofMultiValueBinary((Map<GlideString, Object>) data);
         }
@@ -703,7 +704,7 @@ public class GlideClusterClient extends BaseClient
             // each `Object` is a `Map<String, Object>[]` actually
             Map<String, Object> info = handleMapResponse(response);
             Map<String, Map<String, Object>[]> data = new LinkedHashMap<>();
-            for (var nodeInfo : info.entrySet()) {
+            for (Map.Entry<String, Object> nodeInfo : info.entrySet()) {
                 data.put(nodeInfo.getKey(), handleFunctionListResponse((Object[]) nodeInfo.getValue()));
             }
             return ClusterValue.ofMultiValue(data);
@@ -721,7 +722,7 @@ public class GlideClusterClient extends BaseClient
             // each `Object` is a `Map<GlideString, Object>[]` actually
             Map<GlideString, Object> info = handleBinaryStringMapResponse(response);
             Map<GlideString, Map<GlideString, Object>[]> data = new LinkedHashMap<>();
-            for (var nodeInfo : info.entrySet()) {
+            for (Map.Entry<GlideString, Object> nodeInfo : info.entrySet()) {
                 data.put(
                         nodeInfo.getKey(), handleFunctionListResponseBinary((Object[]) nodeInfo.getValue()));
             }
@@ -1058,10 +1059,10 @@ public class GlideClusterClient extends BaseClient
     public CompletableFuture<Object> invokeScript(@NonNull Script script, @NonNull Route route) {
         if (script.getBinaryOutput()) {
             return commandManager.submitScript(
-                    script, List.of(), route, this::handleBinaryObjectOrNullResponse);
+                    script, Collections.emptyList(), route, this::handleBinaryObjectOrNullResponse);
         } else {
             return commandManager.submitScript(
-                    script, List.of(), route, this::handleObjectOrNullResponse);
+                    script, Collections.emptyList(), route, this::handleObjectOrNullResponse);
         }
     }
 
