@@ -83,6 +83,8 @@ import glide.api.models.configuration.RequestRoutingConfiguration.Route;
 import glide.api.models.configuration.RequestRoutingConfiguration.SingleNodeRoute;
 import glide.managers.CommandManager;
 import glide.managers.GlideExceptionCheckedFunction;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
@@ -117,10 +119,10 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        try (var client = new TestClient(commandManager, "TEST")) {
-            var value = client.customCommand(TEST_ARGS).get();
+        try (TestClient client = new TestClient(commandManager, "TEST")) {
+            ClusterValue<?> value = client.customCommand(TEST_ARGS).get();
             assertEquals("TEST", value.getSingleValue());
         }
     }
@@ -128,11 +130,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(TEST_ARGS).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(TEST_ARGS).get();
             assertEquals(data, value.getMultiValue());
         }
     }
@@ -140,10 +142,10 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_binary_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        try (var client = new TestClient(commandManager, "TEST")) {
-            var value = client.customCommand(new GlideString[0]).get();
+        try (TestClient client = new TestClient(commandManager, "TEST")) {
+            ClusterValue<?> value = client.customCommand(new GlideString[0]).get();
             assertEquals("TEST", value.getSingleValue());
         }
     }
@@ -151,11 +153,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_binary_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(new GlideString[0]).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(new GlideString[0]).get();
             assertEquals(data, value.getMultiValue());
         }
     }
@@ -163,12 +165,12 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_binary_returns_multi_binary_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of(gs("key1"), "value1", gs("key2"), "value2");
-        var dataNormalized = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(new GlideString[0]).get();
+        Map<?, ?> data = createMap(gs("key1"), "value1", gs("key2"), "value2");
+        Map<?, ?> dataNormalized = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(new GlideString[0]).get();
             assertEquals(dataNormalized, value.getMultiValue());
         }
     }
@@ -177,11 +179,11 @@ public class GlideClusterClientTest {
     @SneakyThrows
     // test checks that even a map returned as a single value when single node route is used
     public void custom_command_with_single_node_route_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(TEST_ARGS, RANDOM).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(TEST_ARGS, RANDOM).get();
             assertEquals(data, value.getSingleValue());
         }
     }
@@ -189,11 +191,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_with_multi_node_route_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(TEST_ARGS, ALL_NODES).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(TEST_ARGS, ALL_NODES).get();
             assertEquals(data, value.getMultiValue());
         }
     }
@@ -201,12 +203,12 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_returns_single_value_on_constant_response() {
-        var commandManager =
+        commandManager =
                 new TestCommandManager(
                         Response.newBuilder().setConstantResponse(ConstantResponse.OK).build());
 
-        try (var client = new TestClient(commandManager, "OK")) {
-            var value = client.customCommand(TEST_ARGS, ALL_NODES).get();
+        try (TestClient client = new TestClient(commandManager, "OK")) {
+            ClusterValue<?> value = client.customCommand(TEST_ARGS, ALL_NODES).get();
             assertEquals("OK", value.getSingleValue());
         }
     }
@@ -215,11 +217,11 @@ public class GlideClusterClientTest {
     @SneakyThrows
     // test checks that even a map returned as a single value when single node route is used
     public void custom_command_binary_with_single_node_route_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(new GlideString[0], RANDOM).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(new GlideString[0], RANDOM).get();
             assertEquals(data, value.getSingleValue());
         }
     }
@@ -227,12 +229,12 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_binary_with_multi_node_route_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of(gs("key1"), "value1", gs("key2"), "value2");
-        var dataNormalized = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.customCommand(new GlideString[0], ALL_NODES).get();
+        Map<?, ?> data = createMap(gs("key1"), "value1", gs("key2"), "value2");
+        Map<?, ?> dataNormalized = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.customCommand(new GlideString[0], ALL_NODES).get();
             assertEquals(dataNormalized, value.getMultiValue());
         }
     }
@@ -240,12 +242,12 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void custom_command_binary_returns_single_value_on_constant_response() {
-        var commandManager =
+        commandManager =
                 new TestCommandManager(
                         Response.newBuilder().setConstantResponse(ConstantResponse.OK).build());
 
-        try (var client = new TestClient(commandManager, "OK")) {
-            var value = client.customCommand(new GlideString[0], ALL_NODES).get();
+        try (TestClient client = new TestClient(commandManager, "OK")) {
+            ClusterValue<?> value = client.customCommand(new GlideString[0], ALL_NODES).get();
             assertEquals("OK", value.getSingleValue());
         }
     }
@@ -611,7 +613,7 @@ public class GlideClusterClientTest {
     @Test
     public void info_with_route_returns_string() {
         // setup
-        Map<String, String> testClusterValue = Map.of("addr1", "addr1 result", "addr2", "addr2 result");
+        Map<String, String> testClusterValue = createMap("addr1", "addr1 result", "addr2", "addr2 result");
         Route route = ALL_NODES;
         CompletableFuture<ClusterValue<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(ClusterValue.of(testClusterValue));
@@ -635,7 +637,7 @@ public class GlideClusterClientTest {
     public void info_with_route_with_infoOptions_returns_string() {
         // setup
         String[] infoArguments = new String[] {"ALL", "DEFAULT"};
-        Map<String, String> testClusterValue = Map.of("addr1", "addr1 result", "addr2", "addr2 result");
+        Map<String, String> testClusterValue = createMap("addr1", "addr1 result", "addr2", "addr2 result");
         CompletableFuture<ClusterValue<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(ClusterValue.of(testClusterValue));
 
@@ -660,11 +662,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void info_with_single_node_route_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = "info string";
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.info(RANDOM).get();
+        String data = "info string";
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.info(RANDOM).get();
             assertAll(
                     () -> assertTrue(value.hasSingleData()),
                     () -> assertEquals(data, value.getSingleValue()));
@@ -674,11 +676,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void info_with_multi_node_route_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.info(ALL_NODES).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.info(ALL_NODES).get();
             assertAll(
                     () -> assertTrue(value.hasMultiData()), () -> assertEquals(data, value.getMultiValue()));
         }
@@ -687,11 +689,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void info_with_options_and_single_node_route_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = "info string";
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.info(new Section[0], RANDOM).get();
+        String data = "info string";
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.info(new Section[0], RANDOM).get();
             assertAll(
                     () -> assertTrue(value.hasSingleData()),
                     () -> assertEquals(data, value.getSingleValue()));
@@ -701,11 +703,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void info_with_options_and_multi_node_route_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("key1", "value1", "key2", "value2");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.info(new Section[0], ALL_NODES).get();
+        Map<?, ?> data = createMap("key1", "value1", "key2", "value2");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.info(new Section[0], ALL_NODES).get();
             assertAll(
                     () -> assertTrue(value.hasMultiData()), () -> assertEquals(data, value.getMultiValue()));
         }
@@ -733,11 +735,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void clientId_with_multi_node_route_returns_success() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("n1", 42L);
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.clientId(ALL_NODES).get();
+        Map<?, ?> data = Collections.singletonMap("n1", 42L);
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.clientId(ALL_NODES).get();
 
             assertEquals(data, value.getMultiValue());
         }
@@ -746,11 +748,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void clientId_with_single_node_route_returns_success() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        try (var client = new TestClient(commandManager, 42L)) {
-            var value = client.clientId(RANDOM).get();
-            assertEquals(42, value.getSingleValue());
+        try (TestClient client = new TestClient(commandManager, 42L)) {
+            ClusterValue<?> value = client.clientId(RANDOM).get();
+            assertEquals(42L, value.getSingleValue());
         }
     }
 
@@ -776,10 +778,10 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void clientGetName_with_single_node_route_returns_success() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        try (var client = new TestClient(commandManager, "TEST")) {
-            var value = client.clientGetName(RANDOM).get();
+        try (TestClient client = new TestClient(commandManager, "TEST")) {
+            ClusterValue<?> value = client.clientGetName(RANDOM).get();
             assertEquals("TEST", value.getSingleValue());
         }
     }
@@ -787,11 +789,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void clientGetName_with_multi_node_route_returns_success() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("n1", "TEST");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.clientGetName(ALL_NODES).get();
+        Map<?, ?> data = Collections.singletonMap("n1", "TEST");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.clientGetName(ALL_NODES).get();
             assertEquals(data, value.getMultiValue());
         }
     }
@@ -887,7 +889,7 @@ public class GlideClusterClientTest {
     @Test
     public void configGet_returns_success() {
         // setup
-        var testPayload = Map.of("timeout", "1000");
+        Map<String, String> testPayload = Collections.singletonMap("timeout", "1000");
         CompletableFuture<Map<String, String>> testResponse = new CompletableFuture<>();
         testResponse.complete(testPayload);
 
@@ -909,11 +911,11 @@ public class GlideClusterClientTest {
     @SneakyThrows
     // test checks that even a map returned as a single value when single node route is used
     public void configGet_with_single_node_route_returns_single_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("timeout", "1000", "maxmemory", "1GB");
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.configGet(TEST_ARGS, RANDOM).get();
+        Map<?, ?> data = createMap("timeout", "1000", "maxmemory", "1GB");
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.configGet(TEST_ARGS, RANDOM).get();
             assertAll(
                     () -> assertTrue(value.hasSingleData()),
                     () -> assertEquals(data, value.getSingleValue()));
@@ -923,11 +925,11 @@ public class GlideClusterClientTest {
     @Test
     @SneakyThrows
     public void configGet_with_multi_node_route_returns_multi_value() {
-        var commandManager = new TestCommandManager(null);
+        CommandManager commandManager = new TestCommandManager(null);
 
-        var data = Map.of("node1", Map.of("timeout", "1000", "maxmemory", "1GB"));
-        try (var client = new TestClient(commandManager, data)) {
-            var value = client.configGet(TEST_ARGS, ALL_NODES).get();
+        Map<?, ?> data = Collections.singletonMap("node1", createMap("timeout", "1000", "maxmemory", "1GB"));
+        try (TestClient client = new TestClient(commandManager, data)) {
+            ClusterValue<?> value = client.configGet(TEST_ARGS, ALL_NODES).get();
             assertAll(
                     () -> assertTrue(value.hasMultiData()), () -> assertEquals(data, value.getMultiValue()));
         }
@@ -946,7 +948,7 @@ public class GlideClusterClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<String> response = service.configSet(Map.of("timeout", "1000"));
+        CompletableFuture<String> response = service.configSet(Collections.singletonMap("timeout", "1000"));
 
         // verify
         assertEquals(testResponse, response);
@@ -966,7 +968,7 @@ public class GlideClusterClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<String> response = service.configSet(Map.of("value", "42"), RANDOM);
+        CompletableFuture<String> response = service.configSet(Collections.singletonMap("value", "42"), RANDOM);
 
         // verify
         assertEquals(testResponse, response);
@@ -2319,7 +2321,7 @@ public class GlideClusterClientTest {
         // setup
         String[] args = new String[0];
         ClusterValue<Map<String, Map<String, Object>>> value =
-                ClusterValue.ofSingleValue(Map.of("1", Map.of("2", 2)));
+                ClusterValue.ofSingleValue(Collections.singletonMap("1", Collections.singletonMap("2", 2)));
         CompletableFuture<ClusterValue<Map<String, Map<String, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -2345,7 +2347,7 @@ public class GlideClusterClientTest {
         // setup
         GlideString[] args = new GlideString[0];
         ClusterValue<Map<GlideString, Map<GlideString, Object>>> value =
-                ClusterValue.ofSingleValue(Map.of(gs("1"), Map.of(gs("2"), 2)));
+                ClusterValue.ofSingleValue(Collections.singletonMap(gs("1"), Collections.singletonMap(gs("2"), 2)));
         CompletableFuture<ClusterValue<Map<GlideString, Map<GlideString, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -2519,7 +2521,7 @@ public class GlideClusterClientTest {
         // setup
         String[] args = new String[0];
         ClusterValue<Map<String, Map<String, Object>>> value =
-                ClusterValue.ofSingleValue(Map.of("1", Map.of("2", 2)));
+                ClusterValue.ofSingleValue(Collections.singletonMap("1", Collections.singletonMap("2", 2)));
         CompletableFuture<ClusterValue<Map<String, Map<String, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -2545,7 +2547,7 @@ public class GlideClusterClientTest {
         // setup
         GlideString[] args = new GlideString[0];
         ClusterValue<Map<GlideString, Map<GlideString, Object>>> value =
-                ClusterValue.ofSingleValue(Map.of(gs("1"), Map.of(gs("2"), 2)));
+                ClusterValue.ofSingleValue(Collections.singletonMap(gs("1"), Collections.singletonMap(gs("2"), 2)));
         CompletableFuture<ClusterValue<Map<GlideString, Map<GlideString, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -2858,7 +2860,7 @@ public class GlideClusterClientTest {
     public void pubsubShardNumSub_returns_success() {
         // setup
         String[] arguments = new String[] {"ch1", "ch2"};
-        Map<String, Long> value = Map.of();
+        Map<String, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<String, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -2882,7 +2884,7 @@ public class GlideClusterClientTest {
     public void pubsubShardNumSub_binary_returns_success() {
         // setup
         GlideString[] arguments = new GlideString[] {gs("ch1"), gs("ch2")};
-        Map<GlideString, Long> value = Map.of();
+        Map<GlideString, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<GlideString, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -3480,7 +3482,7 @@ public class GlideClusterClientTest {
         testResponse.complete(payload);
 
         // match on protobuf request
-        when(commandManager.submitScript(eq(script), eq(List.of()), eq(List.of()), any()))
+        when(commandManager.submitScript(eq(script), eq(Arrays.asList()), eq(Arrays.asList()), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -3509,8 +3511,8 @@ public class GlideClusterClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(Arrays.asList(gs("key1"), gs("key2"))),
+                        eq(Arrays.asList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -3545,8 +3547,8 @@ public class GlideClusterClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(Arrays.asList(gs("key1"), gs("key2"))),
+                        eq(Arrays.asList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -3572,7 +3574,7 @@ public class GlideClusterClientTest {
         testResponse.complete(payload);
 
         // match on protobuf request
-        when(commandManager.submitScript(eq(script), eq(List.of()), eq(route), any()))
+        when(commandManager.submitScript(eq(script), eq(Arrays.asList()), eq(route), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -3600,7 +3602,7 @@ public class GlideClusterClientTest {
 
         // match on protobuf request
         when(commandManager.submitScript(
-                        eq(script), eq(List.of(gs("arg1"), gs("arg2"))), eq(route), any()))
+                        eq(script), eq(Arrays.asList(gs("arg1"), gs("arg2"))), eq(route), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -3629,7 +3631,7 @@ public class GlideClusterClientTest {
 
         // match on protobuf request
         when(commandManager.submitScript(
-                        eq(script), eq(List.of(gs("arg1"), gs("arg2"))), eq(route), any()))
+                        eq(script), eq(Arrays.asList(gs("arg1"), gs("arg2"))), eq(route), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -3798,5 +3800,21 @@ public class GlideClusterClientTest {
         // verify
         assertEquals(testResponse, response);
         assertEquals(OK, payload);
+    }
+
+    private static <K, V> Map<K, V> createMap(K k1, V v1, K k2, V v2) {
+        Map<K, V> map = new HashMap<>();
+        map.put(k1, v1);
+        map.put(k2, v2);
+        return map;
+    }
+
+    private static Map<String, Map<String, String>> createNestedMap() {
+        Map<String, String> inner = new HashMap<>();
+        inner.put("timeout", "1000");
+        inner.put("maxmemory", "1GB");
+        Map<String, Map<String, String>> outer = new HashMap<>();
+        outer.put("node1", inner);
+        return outer;
     }
 }
